// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlatRadioButton /> should render normally 1`] = `
<Button
  className="ocm-flat-radio-button"
  isDisabled={false}
  onClick={[Function]}
  variant="tertiary"
>
  <Split
    hasGutter={true}
  >
    <SplitItem
      isFilled={true}
    >
      <Title
        headingLevel="h4"
        size="lg"
      >
        hello
      </Title>
      test
    </SplitItem>
  </Split>
</Button>
`;

exports[`<FlatRadioButton /> should render when disabled 1`] = `
<Button
  className="ocm-flat-radio-button"
  isDisabled={true}
  onClick={[Function]}
  variant="tertiary"
>
  <Split
    hasGutter={true}
  >
    <SplitItem
      isFilled={true}
    >
      <Title
        headingLevel="h4"
        size="lg"
      >
        hello
      </Title>
      test
    </SplitItem>
  </Split>
</Button>
`;

exports[`<FlatRadioButton /> should render when selected 1`] = `
<Button
  className="ocm-flat-radio-button selected"
  isDisabled={false}
  onClick={[Function]}
  variant="tertiary"
>
  <Split
    hasGutter={true}
  >
    <SplitItem
      isFilled={true}
    >
      <Title
        headingLevel="h4"
        size="lg"
      >
        hello
      </Title>
      test
    </SplitItem>
  </Split>
</Button>
`;

exports[`<FlatRadioButton /> should render with tooltip 1`] = `
<Tooltip
  appendTo={[Function]}
  aria="describedby"
  boundary="window"
  className=""
  content="hello world!"
  distance={15}
  enableFlip={true}
  entryDelay={500}
  exitDelay={500}
  flipBehavior={
    Array [
      "top",
      "right",
      "bottom",
      "left",
      "top",
      "right",
      "bottom",
    ]
  }
  id=""
  isAppLauncher={false}
  isContentLeftAligned={false}
  isVisible={false}
  maxWidth="18.75rem"
  position="top"
  tippyProps={Object {}}
  trigger="mouseenter focus"
  zIndex={9999}
>
  <div
    className="ocm-flat-radio-button-disabled"
  >
    <Button
      className="ocm-flat-radio-button"
      isDisabled={false}
      onClick={[Function]}
      variant="tertiary"
    >
      <Split
        hasGutter={true}
      >
        <SplitItem
          isFilled={true}
        >
          <Title
            headingLevel="h4"
            size="lg"
          >
            hello
          </Title>
          test
        </SplitItem>
      </Split>
    </Button>
  </div>
</Tooltip>
`;
